--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -347,17 +347,16 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#product-management" class="sidebar-link flex items-center py-3 px-4 rounded-xl transition duration-300 hover:bg-gray-700 hover:text-blue-300 font-medium text-lg" data-target="product-management-section">
+                    <a href="#add-products" class="sidebar-link flex items-center py-3 px-4 rounded-xl transition duration-300 hover:bg-gray-700 hover:text-blue-300 font-medium text-lg" data-target="add-products-section">
                         <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"></path></svg>
-                        Products
+                        Add Products
                     </a>
-                    <ul class="ml-8 mt-2 space-y-2">
-                        <li>
-                            <a href="#your-products-list-section" class="sidebar-link flex items-center py-2 px-3 rounded-lg transition duration-300 hover:bg-gray-800 hover:text-blue-300 text-sm font-normal" data-target="product-management-section" data-scroll-to="your-products-list-section">
-                                <i class="fas fa-list-alt text-sm mr-2 opacity-75"></i> Your Products
-                            </a>
-                        </li>
-                    </ul>
+                </li>
+                <li>
+                    <a href="#your-products" class="sidebar-link flex items-center py-3 px-4 rounded-xl transition duration-300 hover:bg-gray-700 hover:text-blue-300 font-medium text-lg" data-target="your-products-section">
+                        <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"></path></svg>
+                        Your Products
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -547,86 +546,86 @@
             </div>
         </section>
 
-        <section id="product-management-section" class="bg-white p-6 sm:p-8 rounded-2xl shadow-xl mb-12 border border-gray-200 hidden">
-            <h3 class="text-2xl sm:text-3xl font-semibold text-gray-800 mb-6 sm:mb-8 border-b border-gray-200 pb-4">Manage Products</h3>
+        <!-- NEW: Separate Add Products Section -->
+        <section id="add-products-section" class="bg-white p-6 sm:p-8 rounded-2xl shadow-xl mb-12 border border-gray-200 hidden">
+            <h3 class="text-2xl sm:text-3xl font-semibold text-gray-800 mb-6 sm:mb-8 border-b border-gray-200 pb-4">Add New Product</h3>
 
-            <div id="add-product-section" class="mb-10 p-6 sm:p-8 bg-gray-50 rounded-2xl border border-gray-200 shadow-inner">
-                <h4 class="text-xl sm:text-2xl font-semibold text-gray-800 mb-6">Add New Product</h4>
-                <form id="productForm" class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-6">
-                    <div>
-                        <label for="productName" class="block text-gray-700 text-base font-semibold mb-2">Product Name:</label>
-                        <input type="text" id="productName" name="title" required placeholder="Delicious Dish" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
-                    </div>
-                    <div>
-                        <label for="productCategory" class="block text-gray-700 text-base font-semibold mb-2">Category:</label>
-                        <select id="productCategory" name="category" required class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
-                            <option value="">Select a Category</option>
-                            </select>
-                    </div>
-                    <div class="md:col-span-2">
-                        <label for="productDescription" class="block text-gray-700 text-base font-semibold mb-2">Description:</label>
-                        <textarea id="productDescription" name="description" rows="4" placeholder="A brief description of the product..." class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base"></textarea>
-                    </div>
-                    <div>
-                        <label for="productPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
-                        <input type="text" id="productPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
-                    </div>
-                    <!-- NEW: Product Image URL Input for Add Product Form -->
-                    <div>
-                        <label for="productImageUrl" class="block text-gray-700 text-base font-semibold mb-2">Product Image URL (Optional):</label>
-                        <input type="url" id="productImageUrl" name="imageUrl" placeholder="https://example.com/image.jpg"
-                            class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
-                        <p class="text-xs text-gray-500 mt-1">Paste a direct image URL here. This takes precedence over file upload.</p>
-                    </div>
-                    <!-- Existing Product Image File Upload -->
-                    <div>
-                        <label for="productImage" class="block text-gray-700 text-base font-semibold mb-2">Product Image (PNG, JPG):</label>
-                        <input type="file" id="productImage" name="image" accept="image/*"
-                            class="block w-full text-sm text-gray-700 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 cursor-pointer">
-                        <img id="newProductImagePreview" class="mt-4 max-h-48 object-contain rounded-lg shadow-md border border-gray-200 p-2 hidden" src="" alt="New Product Image Preview">
-                        <p class="text-xs text-gray-500 mt-1">Upload an image file. URL input above takes precedence.</p>
-                    </div>
-                    <div class="md:col-span-2 flex justify-start">
-                        <button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-8 rounded-lg focus:outline-none focus:shadow-outline w-full sm:w-auto transition duration-300 transform hover:scale-105 shadow-md hover:shadow-lg">
-                            Add Product
-                        </button>
-                    </div>
-                    <p id="productMessage" class="md:col-span-2 text-sm mt-2 hidden"></p>
-                </form>
+            <form id="productForm" class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-6">
+                <div>
+                    <label for="productName" class="block text-gray-700 text-base font-semibold mb-2">Product Name:</label>
+                    <input type="text" id="productName" name="title" required placeholder="Delicious Dish" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                </div>
+                <div>
+                    <label for="productCategory" class="block text-gray-700 text-base font-semibold mb-2">Category:</label>
+                    <select id="productCategory" name="category" required class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                        <option value="">Select a Category</option>
+                        </select>
+                </div>
+                <div class="md:col-span-2">
+                    <label for="productDescription" class="block text-gray-700 text-base font-semibold mb-2">Description:</label>
+                    <textarea id="productDescription" name="description" rows="4" placeholder="A brief description of the product..." class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base"></textarea>
+                </div>
+                <div>
+                    <label for="productPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
+                    <input type="text" id="productPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                </div>
+                <!-- NEW: Product Image URL Input for Add Product Form -->
+                <div>
+                    <label for="productImageUrl" class="block text-gray-700 text-base font-semibold mb-2">Product Image URL (Optional):</label>
+                    <input type="url" id="productImageUrl" name="imageUrl" placeholder="https://example.com/image.jpg"
+                        class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                    <p class="text-xs text-gray-500 mt-1">Paste a direct image URL here. This takes precedence over file upload.</p>
+                </div>
+                <!-- Existing Product Image File Upload -->
+                <div>
+                    <label for="productImage" class="block text-gray-700 text-base font-semibold mb-2">Product Image (PNG, JPG):</label>
+                    <input type="file" id="productImage" name="image" accept="image/*"
+                        class="block w-full text-sm text-gray-700 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 cursor-pointer">
+                    <img id="newProductImagePreview" class="mt-4 max-h-48 object-contain rounded-lg shadow-md border border-gray-200 p-2 hidden" src="" alt="New Product Image Preview">
+                    <p class="text-xs text-gray-500 mt-1">Upload an image file. URL input above takes precedence.</p>
+                </div>
+                <div class="md:col-span-2 flex justify-start">
+                    <button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-8 rounded-lg focus:outline-none focus:shadow-outline w-full sm:w-auto transition duration-300 transform hover:scale-105 shadow-md hover:shadow-lg">
+                        Add Product
+                    </button>
+                </div>
+                <p id="productMessage" class="md:col-span-2 text-sm mt-2 hidden"></p>
+            </form>
+        </section>
+
+        <!-- NEW: Separate Your Products Section -->
+        <section id="your-products-section" class="bg-white p-6 sm:p-8 rounded-2xl shadow-xl mb-12 border border-gray-200 hidden">
+            <h3 class="text-2xl sm:text-3xl font-semibold text-gray-800 mb-6 sm:mb-8 border-b border-gray-200 pb-4">Your Products</h3>
+
+            <div class="flex flex-col sm:flex-row gap-4 mb-4">
+                <div class="relative flex-grow">
+                    <input type="text" id="productSearchInput" placeholder="Search products..." class="w-full pl-10 pr-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-700">
+                    <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                </div>
+                <div class="flex-shrink-0 w-full sm:w-1/2 md:w-1/3">
+                    <label for="productFilterCategory" class="sr-only">Filter by Category:</label>
+                    <select id="productFilterCategory" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
+                        <option value="all">All Categories</option>
+                        </select>
+                </div>
             </div>
-
-            <div id="your-products-list-section"> <!-- Added ID for scrolling -->
-                <h4 class="text-xl sm:text-2xl font-semibold text-gray-800 mb-6">Your Products</h4>
-                <div class="flex flex-col sm:flex-row gap-4 mb-4">
-                    <div class="relative flex-grow">
-                        <input type="text" id="productSearchInput" placeholder="Search products..." class="w-full pl-10 pr-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 text-gray-700">
-                        <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-                    </div>
-                    <div class="flex-shrink-0 w-full sm:w-1/2 md:w-1/3">
-                        <label for="productFilterCategory" class="sr-only">Filter by Category:</label>
-                        <select id="productFilterCategory" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
-                            <option value="all">All Categories</option>
-                            </select>
-                    </div>
-                </div>
-                <div class="overflow-x-auto rounded-xl border border-gray-200 shadow-md">
-                    <table class="min-w-full divide-y divide-gray-200">
-                        <thead class="bg-gray-50">
-                            <tr>
-                                <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Image</th>
-                                <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Product Name</th>
-                                <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Category</th>
-                                <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Price (USD)</th>
-                                <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody id="productListTableBody" class="bg-white divide-y divide-gray-200">
-                            <tr>
-                                <td colspan="5" class="text-center py-6 text-gray-500 text-base">No products added yet.</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="overflow-x-auto rounded-xl border border-gray-200 shadow-md">
+                <table class="min-w-full divide-y divide-gray-200">
+                    <thead class="bg-gray-50">
+                        <tr>
+                            <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Image</th>
+                            <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Product Name</th>
+                            <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Category</th>
+                            <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Price (USD)</th>
+                            <th class="py-3 px-4 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="productListTableBody" class="bg-white divide-y divide-gray-200">
+                        <tr>
+                            <td colspan="5" class="text-center py-6 text-gray-500 text-base">No products added yet.</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
             <div id="editProductModal" class="modal-overlay hidden">
@@ -650,13 +649,13 @@
                         <div>
                             <label for="editProductPrice" class="block text-gray-700 text-base font-semibold mb-2">Price (Optional):</label>
                             <input type="text" id="editProductPrice" name="price" placeholder="e.g., 9.99 or 1XX$" class="shadow-sm appearance-none border-2 border-gray-300 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 text-base">
-        <div>
-          <label for="editProductAvailabilityCheckbox" class="block text-gray-700 text-base font-semibold mb-2">
-            Available:
-          </label>
-          <input type="checkbox" id="editProductAvailabilityCheckbox" name="available"
-                 class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
-        </div>
+                        </div>
+                        <div>
+                            <label for="editProductAvailabilityCheckbox" class="block text-gray-700 text-base font-semibold mb-2">
+                                Available:
+                            </label>
+                            <input type="checkbox" id="editProductAvailabilityCheckbox" name="available"
+                                    class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded">
                         </div>
                         <!-- NEW: Product Image URL Input for Edit Product Form -->
                         <div>
